@@ -7,7 +7,8 @@
 - Remove warnings and highlighter settings
 - Add a backwards compatibility check that disables warning preferences
   if the warnings setting was disabled
-- Remove custom game creation
+- Remove custom game creation, if you have an ongoing custom
+  game make sure to finish it befor updating
 - Fix capitalization in print multiple dialog
 - Update translations:
   Jiri Grönroos (fi); Ekaterine Papava (ka); Pawan Chitrakar (ne);
